testdata/step_15/valid/variable_as_arg.c
foo(x) {
    return x + 1;
}

main() {
    a = 1;
    return foo(a);
}