testdata/step_15/invalid/too_many_args.c
foo(a) {
    return a + 1;
}

main() {
    return foo(1, 2);
}